--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -34,8 +34,9 @@ RUN apk update && apk add --no-cache \
   git \
   curl \
   xz \
-  && mkdir -p /var/app \
-  && gem install bundler
+  && mkdir -p /var/app
+
+RUN gem install bundler -v '$BUNDLER_VERSION'
 
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
@@ -127,8 +128,9 @@ RUN apk update && apk add --no-cache \
   postgresql-client \
   imagemagick \
   git \
-  vips \
-  && gem install bundler
+  vips
+
+RUN gem install bundler -v '$BUNDLER_VERSION'
 
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
