--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,7 +36,7 @@ RUN apk update && apk add --no-cache \
   xz \
   && mkdir -p /var/app
 
-RUN gem install bundler -v '${BUNDLER_VERSION}'
+RUN gem install bundler -v ${BUNDLER_VERSION}
 
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
@@ -130,7 +130,7 @@ RUN apk update && apk add --no-cache \
   git \
   vips
 
-RUN gem install bundler -v '${BUNDLER_VERSION}'
+RUN gem install bundler -v ${BUNDLER_VERSION}
 
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
